--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,27 @@
   height: 50px;
   padding: 10px 15px;
 }
+
+.hover-green:hover {
+  background-color: #00b14f;
+  color: white;
+}
+th {
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+td {
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  vertical-align: top;
+}
+input[type="checkbox"] {
+  accent-color: rgb(4, 167, 4);
+  width: 20px;
+  color: white;
+}
 /* 
 a {
   font-weight: 500;
