--- a/client/src/pages/HR/PostJob.css
+++ b/client/src/pages/HR/PostJob.css
@@ -2,6 +2,7 @@
     width: 100%;
     background-color: #e8edf2;
     padding: 20px;
+    overflow-y: "scroll",
 }
 
 .post{
@@ -18,7 +19,7 @@
 
 .banner_img{
     width: 100%;
-    padding: 30px 20px;
+    padding: 50px;
 }
 
 .banner_img img{
@@ -26,7 +27,7 @@
 }
 
 .banner_info{
-    margin-top: 50px;
+    margin-top: 15px;
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
@@ -59,12 +60,14 @@
 .info_main{
     font-size: 20px;
     font-weight: 700;
+    color:#000;
     margin-top: 1.6188rem!important;
 }
 
 .item_label{
     color: #5e6368;
     margin-bottom: 0.285rem!important;
+    margin-top: 8px;
 }
 
 .item_input{
@@ -73,14 +76,23 @@
 }
 
 .item_input input{
+    box-sizing: border-box;
     width: 100%;
     padding: 10px;
+    border: 1px solid #00b14f;
+    border-radius: 5px;
+    background-color: transparent;
 }
 
 .item_input input:focus{
-    outline: 1px #00b14f;
     
+    color:#000;
 }
+
+.item_input input::placeholder{
+    color:#ccc;
+}
+
 
 .form_button{
     cursor: pointer;
@@ -133,5 +145,61 @@
 
 .link_item:hover{
     cursor: pointer;
-    color:#343a40;
+    color:#343a40   ;
+}
+
+.modal,.overlay{
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+}
+
+.overlay{
+    background: rgba(49,49,49,0.7);
+}
+
+.modal-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    line-height: 1.4;
+    background: #FFF;
+    border-radius: 3px;
+    min-width: 800px;
+}
+
+.modal-header{
+    padding: 14px 22px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.close-btn{
+    color:#999;
+    padding:8px;
+}
+
+.close-btn:hover{
+    color:#000;
+    cursor: pointer;
+}
+
+.modal-title{
+    color: #303235;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.modal-context{
+    border-radius: 12px;
+    padding: 20px 24px 20px 10px;
+    background: #f5f8fa;
+    margin: 20px;
+    display: flex;
 }
