--- a/client/src/pages/HR/PostJob.css
+++ b/client/src/pages/HR/PostJob.css
@@ -61,7 +61,7 @@
     font-size: 20px;
     font-weight: 700;
     color:#000;
-    margin-top: 1.6188rem!important;
+    margin-top: 12px;
 }
 
 .item_label{
@@ -99,7 +99,6 @@
     white-space: nowrap;
     border-radius: 5px;
     font-weight: 500!important;
-    margin-top: 25px;
     width: 100%!important;
     padding: 0.6rem 1rem;
     font-size: 1rem;
@@ -111,6 +110,10 @@
     display:flex;
     align-items:center;
     justify-content:center;
+}
+
+.form_button:hover{
+    background: #188230;
 }
 
 .item_error{
