--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 @keyframes slide {
   0% {
     transform: translateX(0);
@@ -33,6 +35,25 @@
 .slide-animation {
   animation: slide 0.7s linear infinite;
 }
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(184, 182, 182);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #bebebe;
+}
+
 
 .custom-select option {
   background-color: yellow;
