--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,8 @@
   /* section-header */
 .section-header {
   background-image: url(../images/bg-header.png);
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   padding: 30px;
 }
 
